Add Connection string

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyWebDbConnection": "server=(localdb)\\MSSQLLocalDB;database=MyTestDb;Trusted_Connection=true"
+  }
 }
