--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyWebDbConnection": "server=(localdb)\\MSSQLLocalDB;database=MyTestDb;Trusted_Connection=true"
+  },
+  "AuthSettings": {
+    "Key": "The key for meine tokene ja",
+    "Audience": "http://localhost:50519",
+    "Issuer": "http://localhost:50519"
   }
+
 }
